--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ footer{
                     PROYECTO <span class="resaltado">01</span>
                 </h3>
                 <div class="proyecto 1">
-                    <a href="Calculadora\index.html" target="_blank"> ver Calculadora</a>
+                    <a href="calculadora\index.html" target="_blank"> ver Calculadora</a>
                 </div>
                 <hr>
             </div>
