--- a/index.html
+++ b/index.html
@@ -520,7 +520,17 @@ footer{
                     PROYECTO <span class="resaltado">02</span>
                 </h3>
                 <div class="proyrcto 2">
-                    <a href="5\index.html" target="_blank"> ver 5</a>
+                    <a href="formulario\index.html" target="_blank"> ver formulario</a>
+                </div>
+                <hr>
+            </div>
+            
+            <div class="col">
+                <h3 class="titulo-curso">
+                    PROYECTO <span class="resaltado">02</span>
+                </h3>
+                <div class="proyrcto 2">
+                    <a href="practica 7\index.html" target="_blank"> ver practica 7</a>
                 </div>
                 <hr>
             </div>
